https proxy pass added

--- a/deployment/developer/launcher/resources/nginx/nginx.conf
+++ b/deployment/developer/launcher/resources/nginx/nginx.conf
@@ -26,7 +26,7 @@ http {
     tcp_nodelay         on;
     keepalive_timeout   65;
     types_hash_max_size 2048;
-    client_max_body_size 100M; 
+    client_max_body_size 100M;
 
     include             /etc/nginx/mime.types;
     default_type        application/octet-stream;
@@ -42,18 +42,17 @@ http {
         server_name  _;
         root         /usr/share/nginx/html;
 
-        max_clie
         # Load configuration files for the default server block.
         include /etc/nginx/default.d/*.conf;
 
         location /v1/authmanager {
             proxy_pass http://localhost:8191;
         }
-        location /preregistration/v1/login/ {
-            proxy_pass http://localhost:9090;
-        }
         location /v1/keymanager {
             proxy_pass http://localhost:8188;
+        }
+        location /preregistration/v1/login/ {
+            proxy_pass http://localhost:9090;
         }
         location /v1/cryptomanager {
             proxy_pass http://localhost:8187;
@@ -75,7 +74,9 @@ http {
             proxy_pass http://localhost:8181;
         }
    
-
+        location /v1/signature{
+            proxy_pass http://localhost:8192;
+        }
 
         error_page 404 /404.html;
             location = /40x.html {
@@ -94,8 +95,8 @@ http {
         server_name  _;
         root         /usr/share/nginx/html;
 
-        ssl_certificate "/etc/pki/nginx/192.168.100.203.crt";
-        ssl_certificate_key "/etc/pki/nginx/192.168.100.203.key";
+        ssl_certificate "/etc/ssl/certs/nginx-selfsigned.crt";
+        ssl_certificate_key "/etc/ssl/private/nginx-selfsigned.key";
         ssl_session_cache shared:SSL:1m;
         ssl_session_timeout  10m;
         ssl_ciphers HIGH:!aNULL:!MD5;
@@ -104,7 +105,37 @@ http {
         # Load configuration files for the default server block.
         include /etc/nginx/default.d/*.conf;
 
-        location / {
+        location /v1/authmanager {
+            proxy_pass http://localhost:8191;
+        }
+        location /v1/keymanager {
+            proxy_pass http://localhost:8188;
+        }
+        location /preregistration/v1/login/ {
+            proxy_pass http://localhost:9090;
+        }
+        location /v1/cryptomanager {
+            proxy_pass http://localhost:8187;
+        }
+        location /registrationprocessor/v1/registrationstatus {
+            proxy_pass http://localhost:8083;
+        }
+        location /registrationprocessor/v1/packetreceiver {
+            proxy_pass http://localhost:8081;
+        }
+        location /v1/masterdata {
+            proxy_pass http://localhost:8186;
+        }
+        location /v1/syncdata {
+            proxy_pass http://localhost:8189;
+        }
+
+        location /v1/auditmanager {
+            proxy_pass http://localhost:8181;
+        }
+   
+        location /v1/signature{
+            proxy_pass http://localhost:8192;
         }
 
         error_page 404 /404.html;
