Logs dir path changed

--- a/deployment/developer/config_server/mosip_configs/registration-processor.properties
+++ b/deployment/developer/config_server/mosip_configs/registration-processor.properties
@@ -384,4 +384,4 @@ mosip.registration.processor.email.id=mosip.email.send
 #Kernel Crypto signature
 registration.processor.signature.isEnabled=false
 
-registration.processor.log_directory=${HOME}/mosip/mosip-infra/deployment/developer/launcher/logs
+registration.processor.log_directory=${HOME}/mosip/logs
