Packet uploader proxy pass added

--- a/deployment/developer/launcher/resources/nginx/nginx.conf
+++ b/deployment/developer/launcher/resources/nginx/nginx.conf
@@ -78,6 +78,10 @@ http {
             proxy_pass http://localhost:8192;
         }
 
+        location /registrationprocessor/v1/uploader {
+            proxy_pass http://localhost:8087;
+        }
+
         error_page 404 /404.html;
             location = /40x.html {
         }
@@ -136,6 +140,10 @@ http {
    
         location /v1/signature{
             proxy_pass http://localhost:8192;
+        }
+
+        location /registrationprocessor/v1/uploader {
+            proxy_pass http://localhost:8087;
         }
 
         error_page 404 /404.html;
