Crypto signature enabled

--- a/deployment/developer/config_server/mosip_configs/registration-processor.properties
+++ b/deployment/developer/config_server/mosip_configs/registration-processor.properties
@@ -382,6 +382,6 @@ mosip.registration.processor.sms.id=mosip.sms.send
 mosip.registration.processor.email.id=mosip.email.send
 
 #Kernel Crypto signature
-registration.processor.signature.isEnabled=false
+registration.processor.signature.isEnabled=true
 
 registration.processor.log_directory=${HOME}/mosip/logs
