Country name changed

--- a/deployment/developer/config_server/mosip_configs/application.properties
+++ b/deployment/developer/config_server/mosip_configs/application.properties
@@ -37,7 +37,7 @@ mosip.id.validation.identity.region.[*].value=^(?=.{0,50}$).*
 mosip.id.validation.identity.province.[*].value=^(?=.{0,50}$).*
 mosip.id.validation.identity.city.[*].value=^(?=.{0,50}$).*
 mosip.id.validation.identity.referenceIdentityNumber=^([0-9]{10,30})$
-mosip.country.code=MOR
+mosip.country.code=CON
 
 # Language Supported By Platform - ISO 
 mosip.supported-languages=eng,ara,fra
