--- a/deployment/sandbox/config-properties/registration-processor-qa.properties
+++ b/deployment/sandbox/config-properties/registration-processor-qa.properties
@@ -272,7 +272,7 @@ registration.processor.dmz.server.port=22
 #Packet uploader server protocol
 registration.processor.dmz.server.protocal=sftp
 #Either password or ppk file should be provided
-registration.processor.dmz.server.password=Madmin@12345
+registration.processor.dmz.server.password=<ToBeReplaced>
 #registration.processor.vm.ppk=Mosip_Private_key.ppk
 
 #---------Message Sender Stage----------------------
