commenting docker secrets

--- a/deployment/sandbox/kubernetes/pre-registration/pre-registration-batchjob-deployment.yml
+++ b/deployment/sandbox/kubernetes/pre-registration/pre-registration-batchjob-deployment.yml
@@ -49,5 +49,5 @@ spec:
         ports:
         - containerPort: 9097
         imagePullPolicy: Always
-      imagePullSecrets:
-      - name: pvt-reg-cred
+      # imagePullSecrets:
+      # - name: pvt-reg-cred
