--- a/deployment/sandbox/kubernetes/pre-registration/pre-registration-demographic-service-deployment-and-service.yml
+++ b/deployment/sandbox/kubernetes/pre-registration/pre-registration-demographic-service-deployment-and-service.yml
@@ -49,8 +49,8 @@ spec:
         ports:
         - containerPort: 9092
         imagePullPolicy: Always
-      imagePullSecrets:
-      - name: pvt-reg-cred
+      # imagePullSecrets:
+      # - name: pvt-reg-cred
 ---
 apiVersion: v1
 kind: Service
