--- a/deployment/sandbox/kubernetes/registration-processor/registration-processor-camel-bridge-service-and-deployment.yml
+++ b/deployment/sandbox/kubernetes/registration-processor/registration-processor-camel-bridge-service-and-deployment.yml
@@ -55,8 +55,8 @@ spec:
         - name: zone_env
           value: secure
         imagePullPolicy: Always
-      imagePullSecrets:
-      - name: pvt-reg-cred
+      # imagePullSecrets:
+      # - name: pvt-reg-cred
 ---
 apiVersion: v1
 kind: Service
