--- a/deployment/sandbox/kubernetes/pre-registration/pre-registration-ui-configuration.yml
+++ b/deployment/sandbox/kubernetes/pre-registration/pre-registration-ui-configuration.yml
@@ -1,6 +1,6 @@
 apiVersion: v1
 data:
-  config.json: "{\r\n \"BASE_URL\":\"http://<yourPrivateIp>/\",\r\n \"PRE_REG_URL\":\"preregistration/v1/\"\r\n}"
+  config.json: "{\r\n \"BASE_URL\":\"http://172.16.17.4/\",\r\n \"PRE_REG_URL\":\"preregistration/v1/\"\r\n}"
 kind: ConfigMap
 metadata:
   name: pre-registration-ui-configuration
