reducing vid values

--- a/deployment/sandbox/config-properties/kernel-qa.properties
+++ b/deployment/sandbox/config-properties/kernel-qa.properties
@@ -142,9 +142,9 @@ mosip.kernel.tokenid.partnercode.salt=yS8w5Wb6vhIKdf1msi4LYTJks7mqkbmITk2O63Iq8h
 
 #------------------------VID Generator Service---------------------------------------
 #minimum threshold of unused vid
-mosip.kernel.vid.min-unused-threshold=100000
+mosip.kernel.vid.min-unused-threshold=50
 #number of vids to generate
-mosip.kernel.vid.vids-to-generate=200000
+mosip.kernel.vid.vids-to-generate=100
 #time to renew after expiry(in days)
 mosip.kernel.vid.time-to-renew-after-expiry=5
 #for genaration on init vids timeout 
