--- a/deployment/sandbox/playbooks/mosip-sandbox-launcher.yml
+++ b/deployment/sandbox/playbooks/mosip-sandbox-launcher.yml
@@ -12,5 +12,5 @@
 - include: deploying-ingress-file.yml
 - include: deploying-pre-registration-modules.yml
 - include: install-configure-hdfs.yml
-- include: deploying-registration-processor-modules.yml
+#- include: deploying-registration-processor-modules.yml
 - include: deploying-id-repo-modules.yml
