--- a/deployment/sandbox/config-properties/registration-processor-qa.properties
+++ b/deployment/sandbox/config-properties/registration-processor-qa.properties
@@ -266,14 +266,15 @@ registration.processor.rid.machineidsubstring=10
 #Packet uploader server host
 registration.processor.dmz.server.host=172.16.17.4
 #Packet uploader server user
-registration.processor.dmz.server.user=madmin
+registration.processor.dmz.server.user=regprocuser
 #Packet uploader server port
 registration.processor.dmz.server.port=22
 #Packet uploader server protocol
 registration.processor.dmz.server.protocal=sftp
 #Either password or ppk file should be provided
-registration.processor.dmz.server.password=<ToBeReplaced>
-#registration.processor.vm.ppk=Mosip_Private_key.ppk
+registration.processor.dmz.server.password=Mosip@12345
+registration.processor.vm.ppk=Mosip_Private_key_dummy.ppk
+registration.processor.sftp.connection.pool.max.session=10
 
 #---------Message Sender Stage----------------------
 #Mapping Identity json to map with the applicant id json
