--- a/deployment/sandbox/playbooks/deploying-registration-processor-modules.yml
+++ b/deployment/sandbox/playbooks/deploying-registration-processor-modules.yml
@@ -9,10 +9,26 @@
       - debug:
           msg: "{{ config_private_ip.stdout }}"
 
+      - name: Creating user with name regprocuser
+        user: 
+          name: regprocuser
+          comment: This user will be used for packet received stage
+          uid: 1040
+          groups: sudo 
+          password: "{{'Mosip@12345' | password_hash('sha512')}}"
+          shell: /bin/bash
+          state: present
+         # remove: yes
+
+      - name: Setting NOPASSWD for regprocuser
+        lineinfile:
+          path: /etc/sudoers
+          line: regprocuser ALL=(ALL) NOPASSWD:ALL
+
       - name: Run Registration Status
         docker_container:
           name: registration-status
-          image: mosipid/registration-processor-registration-status-service:1.0.6-SNAPSHOT.62
+          image: docker-registry.mosip.io:5000/registration-processor-registration-status-service:1.0.6
           state: started
           env:
             spring_config_url_env: "{{ config_private_ip.stdout }}/config"
@@ -25,7 +41,7 @@
       # - name: Run Registration Processor Packet generator 
       #   docker_container:
       #     name: registration-processor-packet-generator
-      #     image: mosipid/registration-processor-packet-generator-service:0.10.2.3166
+      #     image: docker-registry.mosip.io:5000/registration-processor-packet-generator-service:0.10.2.3166
       #     state: started
       #     env:
       #       spring_config_url_env: "{{ config_private_ip.stdout }}/config"
@@ -38,12 +54,14 @@
       - name: Run Registration Processor Packet Receiver Stage
         docker_container:
           name: registration-processor-packet-receiver-stage
-          image: mosipid/registration-processor-packet-receiver-stage:1.0.6-SNAPSHOT.62
+          image: docker-registry.mosip.io:5000/registration-processor-packet-receiver-stage:1.0.6
           state: started
           env:
             spring_config_url_env: "{{ config_private_ip.stdout }}/config"
             spring_config_label_env: master
             active_profile_env: qa
+          ports:
+            - "8081:8081"
           volumes:
             - /home/ftp1/LANDING_ZONE:/home/ftp1/LANDING_ZONE
             - /home/ftp1/ARCHIVE_PACKET_LOCATION:/home/ftp1/ARCHIVE_PACKET_LOCATION
@@ -54,10 +72,17 @@
           network_mode: host
           privileged: yes
 
+      - name: Changing ownership to regprocuser    
+        file: 
+          path: /home/ftp1
+          owner: regprocuser
+          state: directory
+          recurse: yes
+          
       - name: Run Registration Processor Common Camel Bridge
         docker_container:
           name: registration-processor-common-camel-bridge
-          image: mosipid/registration-processor-common-camel-bridge:1.0.6-SNAPSHOT.62
+          image: docker-registry.mosip.io:5000/registration-processor-common-camel-bridge:1.0.6
           state: started
           env:
             spring_config_url_env: "{{ config_private_ip.stdout }}/config"
