generalizing private ip for reg proc

--- a/deployment/sandbox/playbooks/kernel-config-server.yml
+++ b/deployment/sandbox/playbooks/kernel-config-server.yml
@@ -10,10 +10,10 @@
           VMIP: "{{ hostvars[groups['SandboxVM'][0]]['VMIP'] }}"
           version_kernel_config_jar: 1.0.5
 
-      # - name: Download Kernel Config Server
-      #   get_url:
-      #     url: http://13.71.87.138:8040/artifactory/libs-release-local/io/mosip/kernel/kernel-config-server/{{ version_kernel_config_jar }}/kernel-config-server-{{ version_kernel_config_jar }}.jar
-      #     dest: "{{ playbook_dir | dirname}}/Dockerfiles"
+      - name: Download Kernel Config Server
+          get_url:
+          url: http://13.71.87.138:8040/artifactory/libs-release-local/io/mosip/kernel/kernel-config-server/{{ version_kernel_config_jar }}/kernel-config-server-{{ version_kernel_config_jar }}.jar
+          dest: "{{ playbook_dir | dirname}}/Dockerfiles"
       
       - name: getting private IP of machine
         shell: hostname -I | awk '{print $1}'
