--- a/deployment/sandbox/v2/postgres/kube_postgres_deploy.yml
+++ b/deployment/sandbox/v2/postgres/kube_postgres_deploy.yml
@@ -26,8 +26,8 @@ spec:
         env:
         - name: POSTGRES_PASSWORD
           value: "postgres"
-#        ports:
-#        - containerPort: 5432 
+        ports:
+        - containerPort: 5432 
 ---
 apiVersion: v1
 kind: Service
