[MOSIP-257] Reorg, templates added. WIP.

--- a/deployment/sandbox/v2/roles/config-server/vars/main.yml
+++ b/deployment/sandbox/v2/roles/config-server/vars/main.yml
@@ -1,2 +1,4 @@
 ---
 docker_path: '{{playbook_dir}}/roles/config-server/files/'
+version: "{{modules['kernel-config-server']['version']}}"
+config_host_path: "{{playbook_dir}}/roles/config-server/files/properties"
