--- a/deployment/sandbox/kubernetes/registration-processor/registration-processor-request-handler-service-deployment-and-service.yml
+++ b/deployment/sandbox/kubernetes/registration-processor/registration-processor-request-handler-service-deployment-and-service.yml
@@ -35,7 +35,7 @@ spec:
           value: http://kernel-config-server:51000/config
       containers:
       - name: registration-processor-request-handler-service
-        image: mosipid/registration-processor-request-handler-service:1.0.6-SNAPSHOT.62
+        image: mosipid/registration-processor-request-handler-service:1.0.7-SNAPSHOT
         ports:
         - name: eventbus-port
           containerPort: 5713
@@ -53,8 +53,8 @@ spec:
         - name: spring_config_url_env
           value: http://kernel-config-server:51000/config
         imagePullPolicy: Always
-      # imagePullSecrets:
-      # - name: pvt-reg-cred
+      imagePullSecrets:
+      - name: pvt-reg-cred
 ---
 apiVersion: v1
 kind: Service
@@ -66,4 +66,3 @@ spec:
   - port: 8082
   selector:
     app: registration-processor-request-handler-service
-  type: NodePort
