--- a/deployment/sandbox/kubernetes/registration-processor/registration-processor-external-integration-service-and-deployment.yml
+++ b/deployment/sandbox/kubernetes/registration-processor/registration-processor-external-integration-service-and-deployment.yml
@@ -34,7 +34,7 @@ spec:
            value: http://kernel-config-server:51000/config
       containers:
       - name: registration-processor-external-integration-service
-        image: mosipid/registration-processor-external-integration-service:1.0.6-SNAPSHOT.62
+        image: mosipid/registration-processor-external-integration-service:1.0.6
         ports:
           - name: verticle-port
             containerPort: 8201
@@ -46,8 +46,8 @@ spec:
         - name: spring_config_url_env
           value: http://kernel-config-server:51000/config
         imagePullPolicy: Always
-      # imagePullSecrets:
-      # - name: pvt-reg-cred
+      imagePullSecrets:
+      - name: pvt-reg-cred
 ---
 apiVersion: v1
 kind: Service
@@ -59,4 +59,4 @@ spec:
     - port: 8201
   selector:
     app: registration-processor-external-integration-service
-  type: NodePort
+
