--- a/deployment/sandbox/kubernetes/registration-processor/registration-processor-reprocessor-stage-deployment-and-service.yml
+++ b/deployment/sandbox/kubernetes/registration-processor/registration-processor-reprocessor-stage-deployment-and-service.yml
@@ -35,7 +35,7 @@ spec:
            value: http://kernel-config-server:51000/config
       containers:
       - name: registration-processor-reprocessor-stage
-        image: mosipid/registration-processor-reprocessor-stage:1.0.6-SNAPSHOT.62
+        image: mosipid/registration-processor-reprocessor-stage:1.0.6
         ports:
           - name: eventbus-port
             containerPort: 5750
@@ -53,8 +53,8 @@ spec:
         - name: spring_config_url_env
           value: http://kernel-config-server:51000/config
         imagePullPolicy: Always
-      # imagePullSecrets:
-      # - name: pvt-reg-cred
+      imagePullSecrets:
+      - name: pvt-reg-cred
 ---
 apiVersion: v1
 kind: Service
@@ -66,4 +66,3 @@ spec:
   - port: 8021
   selector:
     app: registration-processor-reprocessor-stage
-  type: NodePort
