--- a/deployment/sandbox/v2/roles/postgres/vars/main.yml
+++ b/deployment/sandbox/v2/roles/postgres/vars/main.yml
@@ -1,4 +1,4 @@
 db_path: /home/puneet/projects/mosip/pjoshi751/commons/db_scripts
 db_password: postgres
-db_log_path: "{{playbook_dir}/logs/"
+db_log_path: "{{playbook_dir}}/logs/"
 
