--- a/deployment/sandbox/playbooks/mosip-sandbox-reg-proc-launcher.yml
+++ b/deployment/sandbox/playbooks/mosip-sandbox-reg-proc-launcher.yml
@@ -1,3 +1,4 @@
 - include: reading-all-playbook-properties.yml
+- include: install-configure-activemq.yml
 - include: deploying-registration-processor-modules.yml
 - include: deploying-id-repo-modules.yml
