--- a/deployment/sandbox/v2/roles/postgres/tasks/main.yml
+++ b/deployment/sandbox/v2/roles/postgres/tasks/main.yml
@@ -18,15 +18,13 @@
      src: k8s_deploy.yml.j2
      dest: '{{tmp_dir}}/k8s_deploy.yml'  #.j2 is removed automatically
 
-- name: Deploy on Kurbernetes
-  command: 'kubectl apply -f {{tmp_dir}}/k8s_deploy.yml'  
-
-- name: Check status of deployment
-  command: 'kubectl rollout status deployment/postgres'
-  register: result
-  until: result.stdout.find('deployment "postgres" successfully rolled out') != -1
-  retries: 5
-  delay: 5 
+- name: Deploy
+  vars:
+    deployment_yml_path: '{{tmp_dir}}/k8s_deploy.yml'  
+    deployment_name: postgres
+  include_role:
+    name: common
+    tasks_from: k8s_deployment 
   
 # TODO: Check if service has been deployed properly
 
@@ -40,12 +38,12 @@
 - debug:
     msg: 'DB Port = {{db_port}}'
 
-#- include: init_db.yml
-#  with_items:
-#    - mosip_kernel
-#    - mosip_master
-#    - mosip_iam
-#    - mosip_audit
-#    - mosip_idrepo
-#    - mosip_idmap        
+- include: init_db.yml
+  with_items:
+    - mosip_kernel
+    - mosip_master
+    - mosip_iam
+    - mosip_audit
+    - mosip_idrepo
+    - mosip_idmap        
         
