--- a/deployment/sandbox/v2/site.yml
+++ b/deployment/sandbox/v2/site.yml
@@ -1,6 +1,6 @@
 ---
 - hosts: all
   roles:
-    - minikube
-    - postgres
-#    - config-server
+#    - minikube
+#    - postgres
+    - config-server
