[MOSIP-257] Dashboard added. Changes with respect to MultiVM.

--- a/deployment/sandbox/v2/roles/postgres/tasks/main.yml
+++ b/deployment/sandbox/v2/roles/postgres/tasks/main.yml
@@ -7,12 +7,32 @@
     state: directory
     mode: '0755'
 
+# Get db_ip
+- name: Get db_ip
+  command: "kubectl get node --selector='!node-role.kubernetes.io/master' -o json"
+  register: out
+
+- set_fact:
+    db_ip: "{{(out.stdout | from_json)['items'][0].status.addresses[0].address}}"
+    # Note that 'items' is a python keyword, hence we have used ['items']
+    # instead of .items 
+
 # Deploy postgress kubernetes
 - name: Ensures directory is present
   file: 
     path: '{{tmp_dir}}'
     state: directory
 
+# Create persistent storage
+- name: Create  
+  template:
+     src: k8s_pg_storage.yml.j2
+     dest: '{{tmp_dir}}/k8s_pg_storage.yml'
+
+- name: Deploy on Kurbernetes
+  command: 'kubectl apply -f {{tmp_dir}}/k8s_pg_storage.yml' # TODO: repetition
+
+# Deploy Postgres
 - name: Copy k8s template
   template:
      src: k8s_deploy.yml.j2
@@ -24,7 +44,7 @@
     deployment_name: postgres
   include_role:
     name: common
-    tasks_from: k8s_deployment 
+    tasks_from: k8s_deployment   
   
 # TODO: Check if service has been deployed properly
 
