--- a/deployment/sandbox/v2/roles/postgres/vars/main.yml
+++ b/deployment/sandbox/v2/roles/postgres/vars/main.yml
@@ -2,6 +2,6 @@ db_path: /home/puneet/projects/mosip/pjoshi751/commons/db_scripts
 db_password: postgres
 db_log_path: "{{playbook_dir}}/logs/"
 tmp_dir : '{{playbook_dir}}/roles/postgres/files/tmp'
-db_ip: '{{minikube_ip}}' # DB ip is same as minikube ip
+db_ip: '' # To be set in tasks
 db_port: ''  # To be set in the tasks
 
