Config-repo role added. Plenty of changes.

--- a/deployment/sandbox/v2/dashboard.yml
+++ b/deployment/sandbox/v2/dashboard.yml
@@ -2,6 +2,6 @@
 # Run it on a seperate terminal.
 # $ ansible-playbook -i hosts dashboard.yml
 ---
-- hosts: all
+- hosts: console
   roles:
     - dashboard
