--- a/deployment/sandbox/v2/roles/config-server/tasks/main.yml
+++ b/deployment/sandbox/v2/roles/config-server/tasks/main.yml
@@ -1,33 +1,2 @@
 ---
-
-- name: Create a tmp directory
-  file:
-    path: '{{tmp_dir}}'
-    state: directory
-    mode: '0755'
-
-- name: Download kernel-server-config tar
-  get_url:
-    url: "http://13.71.87.138:8040/artifactory/libs-release-local/io/mosip/kernel/kernel-config-server/{{version}}/kernel-config-server-{{version}}.jar"
-    dest: '{{docker_path}}'
-
-- name: Build docker  # We have to set docker environ variables for the shell
-  shell: "eval $(minikube docker-env); docker build --tag kernel-config-server:{{version}} --build-arg config_git_path=/mnt/config --build-arg version={{version}} -f {{docker_path}}/Dockerfile  {{docker_path}}"
-  register: out  
-  
-- debug: var=out.stdout_lines
-
-- name: Copy k8s template
-  template:
-     src: k8s_deploy.xml.j2
-     dest: '{{tmp_dir}}/k8s_deploy.yml'
-
-- name: Deploy
-  vars:
-    deployment_yml_path: '{{tmp_dir}}/k8s_deploy.yml'  
-    deployment_name: kernel-config-server
-  include_role:
-    name: common
-    tasks_from: k8s_deployment 
-
-
+- include: gitrepo.yml 
