--- a/deployment/sandbox/v2/roles/config-gitrepo/tasks/main.yml
+++ b/deployment/sandbox/v2/roles/config-gitrepo/tasks/main.yml
@@ -3,43 +3,43 @@
 # pod from inside Kubernetes cluster.  
 # Assumes docker is installed on console
 
-#- name: Create git repo  
-#  file:
-#    path: '{{config_gitrepo}}'
-#    state: directory
-#    mode: '0755'
-#
-#- name: Delete any files in the above directory if reset
-#  file: 
-#    path: '{{config_gitrepo}}/'
-#    state: absent
-#  tags:
-#    - never # special ansible keyword.
-#    - reset # Delete only on reset
-#
-#- name: Copy all the property files  
-#  copy:
-#    src: properties/  
-#    dest: '{{config_gitrepo}}' 
-#    force: no  # Do not overwrite existing copy
-#
-#- name: Init git repo
-#  command: 'git init {{config_gitrepo}}'
-#
-#- name: Check-in existing files
-#  shell: 'git add -A; git -c user.email="{{ansible_user_id}}@mosip" commit -a -m "Updated"'
-#  args:
-#    chdir: '{{config_gitrepo}}' 
-#  ignore_errors: yes  # TODO: Check git status properly
-# 
-#- name: Start git http server docker 
-#  docker_container:
-#    name: git-http-server
-#    image: cirocosta/gitserver-http
-#    volumes:
-#      - '{{config_gitrepo_dir}}:/var/lib/git'
-#    published_ports: 
-#      - '{{config_gitrepo_port}}:80'
+- name: Create git repo  
+  file:
+    path: '{{config_gitrepo}}'
+    state: directory
+    mode: '0755'
+
+- name: Delete any files in the above directory if reset
+  file: 
+    path: '{{config_gitrepo}}/'
+    state: absent
+  tags:
+    - never # special ansible keyword.
+    - reset # Delete only on reset
+
+- name: Copy all the property files  
+  copy:
+    src: properties/  
+    dest: '{{config_gitrepo}}' 
+    force: no  # Do not overwrite existing copy
+
+- name: Init git repo
+  command: 'git init {{config_gitrepo}}'
+
+- name: Check-in existing files
+  shell: 'git add -A; git -c user.email="{{ansible_user_id}}@mosip" commit -a -m "Updated"'
+  args:
+    chdir: '{{config_gitrepo}}' 
+  ignore_errors: yes  # TODO: Check git status properly
+ 
+- name: Start git http server docker 
+  docker_container:
+    name: git-http-server
+    image: cirocosta/gitserver-http
+    volumes:
+      - '{{config_gitrepo_dir}}:/var/lib/git'
+    published_ports: 
+      - '{{config_gitrepo_port}}:80'
 
 # Deploy endpoint and gitrepo service on Kubernetes 
 - name: Create tmp dir 
