--- a/deployment/sandbox/v2/roles/config-server/files/Dockerfile
+++ b/deployment/sandbox/v2/roles/config-server/files/Dockerfile
@@ -1,8 +1,10 @@
 FROM openjdk:8
-ARG config_git_path
+ARG git_uri
 ARG version
+ARG git_search_paths 
 WORKDIR /home/config
 copy kernel-config-server-${version}.jar /home/config/kernel-config-server.jar
 EXPOSE 51000
-ENV env_config_git_path=${config_git_path}
-CMD java -Dspring.profiles.active=native -Dspring.cloud.config.server.native.search-locations=file:///${env_config_git_path} -jar kernel-config-server.jar
+ENV env_git_uri=${git_uri}
+ENV env_git_search_paths=${git_search_paths}
+CMD java -jar -Dspring.cloud.config.server.git.uri=${env_git_uri} -Dspring.cloud.config.server.git.search-paths=${env_git_search_paths} kernel-config-server.jar
