--- a/deployment/sandbox/v2/roles/config-server/tasks/main.yml
+++ b/deployment/sandbox/v2/roles/config-server/tasks/main.yml
@@ -1,1 +1,40 @@
+# This script downloads kernel config jar, builds docker and deploys it
 ---
+- name: Create a tmp directory
+  file:
+    path: '{{tmp_dir}}'
+    state: directory
+    mode: '0755'
+
+- name: Download kernel-server-config tar
+  get_url:
+    url: "{{artifactory_uri}}/artifactory/libs-release-local/io/mosip/kernel/kernel-config-server/{{version}}/kernel-config-server-{{version}}.jar"
+    dest: '{{docker_path}}'
+
+- name: Build docker  # We have to set docker environ variables for the shell
+  docker_image:
+    path: '{{docker_path}}' 
+    name: kernel-config-server
+    tag: '{{version}}'
+    args:
+      version: '{{version}}'
+      git_uri: 'http://gitrepo/{{config_gitrepo_name}}'
+      #TODO: pickup gitrepo from service name
+  register: out  
+  
+- debug: var=out.stdout_lines
+
+- name: Deploy docker on Kubernetes. Copy k8s template
+  template:
+     src: k8s_deploy.xml.j2
+     dest: '{{tmp_dir}}/k8s_deploy.yml'
+
+- name: Deploy
+  vars:
+    deployment_yml_path: '{{tmp_dir}}/k8s_deploy.yml'  
+    deployment_name: kernel-config-server
+  include_role:
+    name: common
+    tasks_from: k8s_deployment 
+
+
