--- a/deployment/sandbox/v2/roles/config-server/tasks/main.yml
+++ b/deployment/sandbox/v2/roles/config-server/tasks/main.yml
@@ -11,19 +11,19 @@
     url: "{{artifactory_uri}}/artifactory/libs-release-local/io/mosip/kernel/kernel-config-server/{{version}}/kernel-config-server-{{version}}.jar"
     dest: '{{docker_path}}/kernel-config-server-{{version}}.jar'
 
-- name: Build docker  # We have to set docker environ variables for the shell
+- name: Build docker and push it local registry  
   docker_image:
-    name: kernel-config-server
+    name: '{{local_registry}}/kernel-config-server'
     tag: '{{version}}'
+    push: 'yes'
+    source: build
     build:
       path: '{{docker_path}}' 
+      pull: 'yes'
       args:
         version: '{{version}}'
         git_uri: 'http://gitrepo/{{config_gitrepo_name}}'
       #TODO: pickup gitrepo from service name
-  register: out  
-  
-- debug: var=out.stdout_lines
 
 - name: Deploy docker on Kubernetes. Copy k8s template
   template:
