--- a/deployment/sandbox-v2/roles/config-gitrepo/files/properties/kernel-qa.properties
+++ b/deployment/sandbox-v2/roles/config-gitrepo/files/properties/kernel-qa.properties
@@ -128,8 +128,8 @@ mosip.kernel.ida.secret.key=54429689-2203-48c1-9fbf-3ea0d2181944
 ldap.admin.dn=uid=admin,ou=system
 ldap.admin.password=secret
 ldap.userdn.prefix=uid=
-ldap.userdn.suffix=,ou=people,c=morocco
-ldap.roles.base=ou=roles,c=morocco
+ldap.userdn.suffix=,ou=people,c=mycountry
+ldap.roles.base=ou=roles,c=mycountry
 ldap.roles.search.prefix=(&(objectClass=organizationalRole)(roleOccupant=
 ldap.roles.search.suffix=))
 ldap.roles.class=(objectClass=organizationalRole)
